--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet" />
-    <title>Krokodiller</title>
+    <title>Space runner</title>
     <!--css-->
     <!--app-state-->
   </head>
